--- a/main.css
+++ b/main.css
@@ -2,8 +2,12 @@
 	display: none;
 }
 
+input {
+  margin: 10px;
+}
+
 #map {
-   width: 100%;
-   height: 400px;
+   width: 300px;
+   height: 350px;
    background-color: grey;
  }
