--- a/main.css
+++ b/main.css
@@ -3,6 +3,11 @@
 	text-align: center;
 }
 
+body {
+	background-color: pink;
+}
+
+
 .hidden, #hidden {
 	display: none;
 }
@@ -15,7 +20,7 @@ input {
 /*   width: 300px;
    height: 350px;*/
    width: 577px;
-   height: 450px;
+   height: 300px;
    background-color: grey;
    margin: 0px auto;
  }
@@ -26,6 +31,7 @@ input {
  }
 
  .individual-result {
+ 	background-color: white;
  	border: 2px solid black;
  	border-radius: 3px;
  	margin: 0px auto;
