--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
 }
 
 body {
-	background-color: pink;
+	background-color: white;
 }
 
 
@@ -31,9 +31,10 @@ input {
  }
 
  .individual-result {
- 	background-color: white;
- 	border: 2px solid black;
- 	border-radius: 3px;
+	/* background-color: #F5F5F5; */
+	box-shadow: 7px 7px 5px 0px #F5F5F5; 
+	border-radius: 10px;
+	border: 2px solid #F5F5F5;
  	margin: 0px auto;
  	margin-bottom: 20px;
  	padding: 20px;
