--- a/main.css
+++ b/main.css
@@ -54,11 +54,12 @@ header h1 {
 
 
 #map {
-   width: 577px;
-   height: 300px;
    background-color: grey;
+   height: 350px;
 	 margin: 0px auto;
 	 margin-bottom: 50px;
+   max-width: 95%;
+	 width: 577px;
  }
 
 
@@ -78,11 +79,14 @@ header h1 {
 	border-radius: 10px;
 	border: 2px solid #F5F5F5;
  	margin: 0px auto;
- 	margin-bottom: 20px;
+	 margin-bottom: 20px;
+	 max-width: 80%;
  	padding: 20px;
  	text-align: center;
- 	width: 40%;
+ 	width: 530px;
  }
+
+
 
  .hospital-name {
  	font-size: 20px;
