--- a/main.css
+++ b/main.css
@@ -132,6 +132,7 @@ header {
  /*RESULTS  */
  .results {
 	padding-top: 50px;
+	padding-bottom: 50px;
  }
  
  p {
@@ -173,3 +174,22 @@ header {
  }
 
 
+/* SCROLL TO TOP */
+.scrollToTop{
+	width:100px; 
+	height:130px;
+	padding:10px; 
+	text-align:center; 
+	background: whiteSmoke;
+	font-weight: bold;
+	color: #444;
+	text-decoration: none;
+	position:fixed;
+	bottom:75px;
+	right:40px;
+	display:none;
+	background: url('images/arrow.png') no-repeat 0px 20px;
+}
+.scrollToTop:hover{
+	text-decoration:none;
+}
