--- a/main.css
+++ b/main.css
@@ -141,7 +141,6 @@ header {
 
  .individual-result {
 	background: rgba(204, 204, 204, 0.9);
-	
 	border-radius: 10px;
  	margin: 0px auto;
 	margin-bottom: 20px;
@@ -176,20 +175,13 @@ header {
 
 /* SCROLL TO TOP */
 .scrollToTop{
-	width:100px; 
-	height:130px;
-	padding:10px; 
-	text-align:center; 
-	background: whiteSmoke;
-	font-weight: bold;
-	color: #444;
-	text-decoration: none;
-	position:fixed;
+	background: url('images/arrow.png') no-repeat;
+	background-size: 100%;
 	bottom:75px;
-	right:40px;
+	cursor: pointer;
 	display:none;
-	background: url('images/arrow.png') no-repeat 0px 20px;
-}
-.scrollToTop:hover{
-	text-decoration:none;
+	height:100px;
+	position:fixed;
+	right:40px;
+	width:100px; 
 }
