--- a/main.css
+++ b/main.css
@@ -35,10 +35,12 @@ header {
 
 .banner {
 	background-image: url("images/banner.jpeg");
+	
 	padding: 200px 0px;
 }
 .results {
-	background-image: url("images/body.jpeg")
+	background-image: url("images/dust_scratches.png");
+	/* background-image: url("images/body.jpeg"); */
 }
 
 .parallax {
@@ -50,40 +52,19 @@ header {
 
 
 
-.banner input, select, textarea{
-    color: #2A2728;
-}
-
-::-webkit-input-placeholder { /* WebKit, Blink, Edge */
-    color:    #2A2728;
-}
-:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-   color:    #2A2728;
-   opacity:  1;
-}
-::-moz-placeholder { /* Mozilla Firefox 19+ */
-   color:    #2A2728;
-   opacity:  1;
-}
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
-   color:    #2A2728;
-}
-::-ms-input-placeholder { /* Microsoft Edge */
-   color:    #2A2728;
-}
-
-.banner input{
-	background: rgba(204, 204, 204, 0.5);
-	color: #2A2728;
-	border: none;
-	display: inline-block;
-	font-size: 19px;
-	padding: 35px;
-	width: 500px;
-}
 /*SEARCH BOX  */
+.search-bar input {
+	border: none;
+	border-radius: 15px;
+	padding: 10px 5px;
+	width: 500px;
+	max-width: 80%;
+}
 
-
+.search-bar input:focus {
+	outline: 0;
+	background-color: red;
+}
 
 
  .search-bar button {
@@ -140,7 +121,7 @@ header {
  }
 
  .individual-result {
-	background: rgba(204, 204, 204, 0.9);
+	background-color: white;
 	border-radius: 10px;
  	margin: 0px auto;
 	margin-bottom: 20px;
